# hangry-squid

./: .gitignore  README.md  dune-project  hangry-squid.opam  requirements.txt  run.sh
client/: action.ml  chat.ml  components.ml  components.mli  dune  game_over.ml  index.html  landing_state.ml  landing_state.mli  main.ml  negotiation.ml  page.ml  rules.ml  select.ml  style.css  utils.ml  utils.mli  waiting_room.ml
client/pages/: death.ml  game_over.ml  landing.ml  negotiation.ml  outcome.ml  pages.ml  pages.mli  rules.ml  select.ml  use_item.ml  waiting_room.ml
lib/: action.ml  action.mli  assets.ml  assets.mli  client_state.ml  client_state.mli  dune  game_phase.ml  game_phase.mli  game_state.ml  game_state.mli  item.ml  item.mli  item_effect.ml  item_effect.mli  message.ml  message.mli  player.ml  player.mli  restricted_player_view.ml  restricted_player_view.mli  round_result.ml  round_result.mli  rpcs.ml  rpcs.mli
server/: dune  server.ml  server.mli  server_state.ml  server_state.mli
test/: dune  test_game_state.ml  test_item.ml  test_player.ml
