opam-version: "2.0"
synopsis: "Hangry Games, a social deduction game made with OCaml"
description: "Hangry Games combines elements of hunger games and squid games where players are encouraged to team up, betray, and act to win the most amount of money after 10 rounds. "
maintainer: ["Fahim Hussain <fahimhussain21@gmail.com>"]
authors: ["Fahim Hussain <fahimhussain21@gmail.com>" "Stephen Trainor <stephen.trainor.ko@gmail.com>"]
license: "MIT"
homepage: "https://github.com/fahimmehraj/hangry-squid"
doc: "https://github.com/fahimmehraj/hangry-squid/blob/main/README.md"
bug-reports: "https://github.com/fahimmehraj/hangry-squid/issues"
depends: [
  "dune" {>= "3.18"}
  "ocaml"
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/fahimmehraj/hangry-squid.git"
x-maintenance-intent: ["(latest)"]
