(executable
 (name main)
 (modes js)
 (libraries hangry_squid async_kernel core bonsai bonsai_web js_of_ocaml bonsai_web_components.web_ui_url_var)
 (promote (until-clean))
 (preprocess
  (pps ppx_jane js_of_ocaml-ppx bonsai.ppx_bonsai ppx_css ppx_html)))

(include_subdirs qualified)

(env
 (dev
  (flags
   (:standard -w -27-32))))
